--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
@@ -7,6 +7,7 @@
 
 
 @section Styles{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <style>
         /* 原始圖片的視窗 */
         .image-popup {
@@ -163,9 +164,13 @@
                         <label>重量</label>
                         <input type="text" id="weight" class="form-control" name="Weight">
                     </div>
-                    <div class="col-md-6 productSpecifications">
-                        <label>規格</label>
-                        <input type="text" class="form-control specifications">
+                    <div class="col-md-6 d-flex flex-column" id="productSpecifications">
+                        <div class="d-flex align-items-center">
+                            <label>商品細項</label>
+                            <i class="fa-regular fa-square-plus ms-1" id="addproductSpecifications"></i>
+                            <i class="fa-regular fa-square-minus ms-1" id="minusproductSpecifications"></i>
+                        </div>
+                        <input type="text" class="form-control specifications" id="specifications-0">
                     </div>
                     <div class="col-md-6">
                         <label>折扣</label>
@@ -271,6 +276,14 @@
                         <label>重量</label>
                         <input type="text" id="editor-weight" class="form-control" name="Weight">
                     </div>
+                    <div class="col-md-6 d-flex flex-column" id="edit-productSpecifications">
+                        <div class="d-flex align-items-center">
+                            <label>商品細項</label>
+                            <i class="fa-regular fa-square-plus ms-1" id="edit-addproductSpecifications"></i>
+                            <i class="fa-regular fa-square-minus" id="edit-minusproductSpecifications"></i>
+                        </div>
+                        
+                    </div>
                     <div class="col-md-6">
                         <label>折扣</label>
                         <input type="text" id="editor-discount" class="form-control">
@@ -364,7 +377,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.13.0/Sortable.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-@*    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />*@
+    @*    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />*@
 
     <script>
         // 查看json結構
@@ -385,6 +398,25 @@
             const price = $('#price').val(100)
 
         })
+
+        let id = 1; 
+        $(document).on('click', '#addproductSpecifications', function () {
+            const productSpecifications = $('#productSpecifications');
+            const addproductSpecifications = $(`<input type="text" class="form-control specifications" id="specifications-${id}"></input>`);
+            productSpecifications.append(addproductSpecifications); 
+            id++; 
+        });
+        $(document).on('click', '#edit-addproductSpecifications', function () {
+            const productSpecifications = $('#edit-productSpecifications');
+            const addproductSpecifications = $('<input type="text" class="form-control specifications edit-specifications"></input>');
+            productSpecifications.append(addproductSpecifications);
+        });
+        $(document).on('click', '#edit-minusproductSpecifications', function () {
+            const productSpecifications = $('#edit-productSpecifications');
+            const lastInput = productSpecifications.find('input.specifications:last');
+            lastInput.remove();
+        });
+
 
         $(document).on("change", "#image", function () {
             var files = $(this)[0].files;
@@ -546,9 +578,11 @@
         });
 
         let productID = 0;
+        let editSpecificationID = [];
         //編輯按鈕==============================================
         $('#Product-table').on('click', '.edit-button', function () {
             productID = $(this).data('id')
+            $("#edit-productSpecifications input").remove();
             $.ajax({
                 url: '/AdminCMS/Product/EditShopProducts?id=' + productID,
                 type: 'GET',
@@ -571,7 +605,7 @@
                         $('#editor-image').val(response.data.shopproductImagetable);
                         $('#editor-pinToShop').prop("checked", response.data.pushToShop)
                         $('#editor-offdate').val(response.data.offDay)
-                        
+
                         $.each(response.data.shopProductImageTable, function (index, value) {
                             var blockdiv = $(`<div class="d-flex flex-column align-items-center" id="item-${value.productImageId}"></div>`)
                             var img = $('<img class="img-thumbnail previewable-image w-25">').attr('src', value.productPhoto).attr('data-image-id', value.productImageId);
@@ -585,6 +619,14 @@
                             $('#editor-img').append(container);
                             $("#editor-imgID").append(selectID);
                         });
+                        $.each(response.data.shopProductSpecification , function(index , value){
+                            var editproductSpecifications = $("#edit-productSpecifications")
+                            const SpecificationID = value.id
+                            editSpecificationID.push(SpecificationID)
+                            const editInput = $(`<input type="text" class="form-control specifications" data-attr-id="${value.id}">`)
+                            editInput.val(value.specification);
+                            editproductSpecifications.append(editInput)
+                        })
                         console.log(response.data)
                     } else {
                         alert(response.message);
@@ -592,20 +634,20 @@
                 }
             });
         });
-        $(document).on("click", ".deletedImg" , function(){
+        $(document).on("click", ".deletedImg", function () {
             const id = $(this).data('product-image-id')
             $.ajax({
                 url: "@Url.Action("DeleteEditImg" , "Product" , new{ area = "AdminCMS" })",
-                type:"POST",
-                data:JSON.stringify(id),
-                contentType:"application/json",
+                type: "POST",
+                data: JSON.stringify(id),
+                contentType: "application/json",
                 success: function (response) {
                     if (response.success) {
-                        $('#item-'+ id).remove()
+                        $('#item-' + id).remove()
                         $.ajax({
                             url: '/AdminCMS/Product/EditShopProducts?id=' + productID,
                             type: 'GET',
-                            success: function (response) { 
+                            success: function (response) {
                                 console.log(response.data)
                                 $("#editor-imgID").empty();
                                 $.each(response.data.shopProductImageTable, function (index, value) {
@@ -643,6 +685,9 @@
             }
         });
         let TypeEditor;
+        let productImageId, isChecked;
+        let lastUsedInputID = null;
+        let specificValue = null
         $('#editor-category').on('change', function () {
             TypeEditor = parseInt($(this).val(), 10);
         })
@@ -650,11 +695,17 @@
         $("#category").on("change", function () {
             Type = $(this).val()
         })
-        let productImageId, isChecked;
+        
         $(document).on('change', '.frontCoverCheckbox', function () {
             productImageId = $(this).data('product-image-id');
             isChecked = $(this).is(':checked');
             console.log(productImageId);
+        });
+        $("#edit-productSpecifications").on("input", ".specifications", function () {
+            lastUsedInputID = $(this).data("attr-id")
+            console.log("Last used input ID:", lastUsedInputID);
+            specificValue = $(`#edit-productSpecifications input.specifications[data-attr-id="${lastUsedInputID}"]`).val();
+            console.log("最后使用的 input 的值是：", specificValue);
         });
 
         //儲存按鈕==============================
@@ -673,9 +724,13 @@
             var supplier = $('#editor-supplier').val()
             var discontinued = $('#editor-discontinued').is(":checked")
             var pinToShop = $('#editor-pinToShop').is(":checked")
+            console.log(editSpecificationID)
             var fileInput = $('#editor-image')[0];
             var file = fileInput.files;
-
+            var productId = id;
+            var productSpecificationID = editSpecificationID
+            var productSpecificationIDforEdit = lastUsedInputID;
+            var productSpecificationName = specificValue;
 
             var formData = new FormData();
             formData.append("ProductId", id);
@@ -708,6 +763,25 @@
                 processData: false,
                 contentType: false,
                 success: function (response) {
+                    if(response.success){
+                        $.ajax({
+                            url: "/AdminCMS/Product/editorSpecificationID",  
+                            type: "POST",
+                            data: JSON.stringify({
+                                ProductId: productId,
+                                productSpecificationID: productSpecificationID,
+                                productSpecificationIDforEdit: productSpecificationIDforEdit,
+                                ProductSpecificationName: productSpecificationName
+                            }),
+                            contentType: "application/json",
+                            success: function (response) {
+                                console.log("幹")
+                            },
+                            error: function (xhr, status, error) {
+                                alert("儲存失敗: " + error);
+                            }
+                        });
+                    }
                     alert("儲存成功!");
                     window.location.reload();
                 }
@@ -725,6 +799,7 @@
             const supplier = $("#supplier").val();
             const pinToShop = $("#pinToShop").is(":checked")
             const description = $("#description").val()
+            var productSpecifications = $("#productSpecifications input.specifications"); 
             var fileInput = $('#image')[0];
             var file = fileInput.files;
 
@@ -745,6 +820,9 @@
                     formData.append("ProductPhotos", file[i])
                 }
             }
+            productSpecifications.each(function (index, element) {
+                formData.append("productSpecification", $(element).val())
+            })
             $.ajax({
                 url: "@Url.Action("CreateProduct" , "Product" , new { area="AdminCMS" })",
                 type: "POST",
@@ -805,13 +883,13 @@
                 url: "@Url.Action("SaveSuppier", "Product", new { area = "AdminCMS" })",
                 method: "POST",
                 data: JSON.stringify({
-                    CompanyName:companyName,
-                    ContactPhone :contactPhone,
-                    CompanyAddress:contactAddress
+                    CompanyName: companyName,
+                    ContactPhone: contactPhone,
+                    CompanyAddress: contactAddress
                 }),
                 contentType: "application/json",
                 success: function (response) {
-                    if (response.success == true){
+                    if (response.success == true) {
                         $('#addSuppierModalToggle').modal('hide');
                         alert("儲存成功!");
                         $('#Product-table').DataTable().ajax.reload();
@@ -824,42 +902,42 @@
             });
         });
 
-            //刪除按鈕================================
-            $(document).ready(function () {
-                $(document).on("click", ".delete-button", function () {
-                    var productId = $(this).data("id");
+        //刪除按鈕================================
+        $(document).ready(function () {
+            $(document).on("click", ".delete-button", function () {
+                var productId = $(this).data("id");
 
-                    Swal.fire({
-                        title: '確定要刪除嗎?',
-                        icon: 'warning',
-                        showCancelButton: true,
-                        confirmButtonColor: '#3085d6',
-                        cancelButtonColor: '#d33',
-                        confirmButtonText: 'Yes, delete it!'
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            var deleteButton = $(this);
-                            $.ajax({
-                                url: "/AdminCMS/Product/Delete",
-                                type: "POST",
-                                data: { id: productId },
-                                success: function (response) {
-                                    if (response.success) {
-                                        console.log("項目已成功刪除");
-                                        deleteButton.closest("tr").remove();
-                                        $('#Product-table').DataTable().ajax.reload();
-                                    } else {
-                                        console.log("刪除項目失敗。");
-                                    }
-                                },
-                                error: function (error) {
-                                    console.log("刪除項目時發生錯誤：", error);
+                Swal.fire({
+                    title: '確定要刪除嗎?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Yes, delete it!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        var deleteButton = $(this);
+                        $.ajax({
+                            url: "/AdminCMS/Product/Delete",
+                            type: "POST",
+                            data: { id: productId },
+                            success: function (response) {
+                                if (response.success) {
+                                    console.log("項目已成功刪除");
+                                    deleteButton.closest("tr").remove();
+                                    $('#Product-table').DataTable().ajax.reload();
+                                } else {
+                                    console.log("刪除項目失敗。");
                                 }
-                            });
-                        }
-                    });
+                            },
+                            error: function (error) {
+                                console.log("刪除項目時發生錯誤：", error);
+                            }
+                        });
+                    }
                 });
             });
+        });
 
 
 
